--- a/resources/views/layout/default.twig
+++ b/resources/views/layout/default.twig
@@ -44,9 +44,9 @@
         <!-- Logo -->
         <a href="{{ route('index') }}" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini">FF</span>
+            <span class="logo-mini">SW</span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>Firefly</b>III</span>
+            <span class="logo-lg"><b>StudentWallet.</b></span>
         </a>
 
         <!-- Header Navbar: style can be found in header.less -->
@@ -140,7 +140,6 @@
         <div class="pull-right hidden-xs">
             <b>Version</b> {{ Config.get('firefly.version') }}
         </div>
-        <strong><a href="https://github.com/firefly-iii/firefly-iii">Firefly III</a></strong>
     </footer>
 
     {% include('partials.control-bar') %}
